Tried to fix routing issue. Fixed nav colours and spacing between sections

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,8 @@
 @import './variables.scss';
 hr {
   background-color: $color-ghana-green-light;
-  margin-bottom: 0px;
-  margin-top: 0px;
+  margin-bottom: 30px;
+  margin-top: 30px;
 }
 
 .rc-slider{
